Bug 290612 - Resume playing after Amarok start doesn't seek to saved position, always starts at the beginning with phonon-gstreamer 4.6.2
Summary: Resume playing after Amarok start doesn't seek to saved position, always star...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
: 296670 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-04 18:15 UTC by karaluh
Modified: 2012-11-17 10:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description karaluh 2012-01-04 18:15:18 UTC
Version:           2.5 (using KDE 4.7.4) 
OS:                Linux

As in summary. vlc backend, I'm unable to test any other, because xine is unavailable in current Kubuntu and gstreamer is totaly broken for me.

Reproducible: Always

Steps to Reproduce:
Enable "resume play when amarok starts". Play some song and exit while playing. start amarok.

Actual Results:  
Amarok is in "playing" state, however there's no sound and progress mark doesn't move.

Expected Results:  
Amarok resumes playing the song.

OS: Linux (i686) release 3.0.0-15-generic
Compiler: gcc
Comment 1 Myriam Schweingruber 2012-01-05 15:31:45 UTC
Confirmed, this doesn't work at all, using the vlc backend.

FWIW: the xine backend is deprecated.
Comment 2 Myriam Schweingruber 2012-03-24 08:46:04 UTC
*** Bug 296670 has been marked as a duplicate of this bug. ***
Comment 3 Matěj Laitl 2012-07-03 21:41:02 UTC
Hmm, I'm not able to reproduce this with the gstreamer phonon backed, so maybe this is the phonon-vlc bug? Also, what file type this is? There were bugs with some backends not being able to seek, so maybe this is just another symptom?

Please try to make your gstreamer backend working and investigate, report here, and report the bug upstream if you find the offending backed.
Comment 4 b3nmore 2012-07-04 05:26:06 UTC
In my case both backends resume playing, but the gstreamer-backend starts always at the beginning of the track whereas the vlc-backend starts at the track time at which I quit amarok.

amarok 2.5.0 (KDE 4.8.4)
vlc-backend 0.5.0
gstreamer-backend 4.6.0
Comment 5 Matěj Laitl 2012-08-12 12:13:18 UTC
Reopening, I can reproduce with Amarok 2.6.0 and (not yet publicly annonced) phonon-gstreamer 4.6.2. Phonon-vlc 0.5 works fine here.

The sequence Amarok calls (on just created MediaObject) is:
setCurrentSource( url );
clearQueue();
pause(); // probably because docs say: You can only seek if state() == PlayingState, BufferingState or PausedState
seek( offset );
play();

Phonomials, is this right?
Comment 6 Davide Favaro 2012-09-28 00:03:29 UTC
broken here on Debian Sid
Amarok: 2.6.0
KDE: 4.8.4 (4.8.4)
Qt: 4.8.2
Phonon: 4.6.0
VLC (0.6.0)
PulseAudio: No
Comment 7 Harald Sitter 2012-09-28 05:41:17 UTC
Btw, that call sequence is only right if you do the seek-play part only once you reached Paused state (i.e. in a slot rather than immediately after pause())
Comment 8 Matěj Laitl 2012-09-28 09:37:43 UTC
Will be solved by https://git.reviewboard.kde.org/r/105995/ - Harald already solved the phonon-vlc problem there, now we need a phonon-vlc 0.6.1 to be released and hit distributions.
Comment 9 Harald Sitter 2012-09-28 10:25:35 UTC
Is that a request for release? :O
Comment 10 Matěj Laitl 2012-09-28 10:27:57 UTC
(In reply to comment #9)
> Is that a request for release? :O

Yes, Lord-president. (if you don't have to feel you'll want to add more bugfixez)
Comment 11 Harald Sitter 2012-09-28 11:35:14 UTC
There are no bugs in phonon vlc :P
Comment 12 Matěj Laitl 2012-09-28 23:54:43 UTC
(In reply to comment #11)
> There are no bugs in phonon vlc :P

Then fire up your releasorz enginez, Your Majesty!
Comment 13 Matěj Laitl 2012-11-17 10:34:45 UTC
Git commit 90f3257d24759e4799ae2c91500901275e81ad3e by Matěj Laitl.
Committed on 12/08/2012 at 16:54.
Pushed by laitl into branch 'master'.

EngineController: fix playback resuming for phonon-gstreamer

However, this breaks it for phonon-vlc < 0.6.1, so raise our (strongly)
recommended dependency on it.
REVIEW: 105995
FIXED-IN: 2.7

M  +2    -0    ChangeLog
M  +1    -1    README
M  +37   -7    src/EngineController.cpp
M  +21   -0    src/EngineController.h

http://commits.kde.org/amarok/90f3257d24759e4799ae2c91500901275e81ad3e