EngineController: fix playback resuming for phonon-gstreamer

However, this breaks it for phonon-vlc < 0.6.1, so raise our (strongly)
recommended dependency on it.

BUG: 290612
REVIEW: 105995
FIXED-IN: 2.7